tests/samples/valid/infer_variable_type_from_param.pn

fn foo(param: u16) -> i32
{
	return: 200
}

fn main() -> i32
{
	var five = 5;
	var result = foo(five);
	return: result
}
