tests/samples/invalid/declaration_type_mismatch.pn
fn main() -> i32
{
	var x: i32 = true;
	return: x
}
